--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="pages/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Путешествие по России</title>
+  <title>Путешествия по России</title>
 </head>
 <body>
     <div class="page">
