--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
 
       <header class="header">
         <img class="header__logo" src="sprint-3-images/header-logo.svg" alt="Логотип">
-        <div class="header__lang-links">
-          <a class="header__lang-link header__lang-link_ru" href=#>Ru</a>
-          <a class="header__lang-link header__lang-link_en" href=#>En</a>
-        </div>
+        <ul class="header__lang-links">
+          <li class="header__lang-link header__lang-link_active" href=#>Ru</a>
+          <li class="header__lang-link" href=#>En</a>
+        </ul>
       </header>
 
+      <main>
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" src="sprint-3-images/lead-polka.jpg" alt="Путешествие по России">
-        <p class="lead__caption">ваша полка — верхняя</p>
+          <img class="lead__image" src="sprint-3-images/lead-polka.jpg" alt="Путешествие по России">
+          <p class="lead__caption">ваша полка — верхняя</p>
       </section>
 
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <p class="intro__list">Часовых поясов 11</p>
-        <p class="intro__list">Объектов природного наследия ЮНЕСКО 12</p>
-        <p class="intro__list">Объектов культурного наследия ЮНЕСКО 16</p>
-        <p class="intro__list">Природных заповедников 105</p>
-        <p class="intro__list">Аэропортов 241</p>
+      <ul class="intro__list-section">
+        <li class="intro__list"><span class="intro__list_bold">Часовых поясов</span> 11</li>
+        <li class="intro__list"><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list"><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list"><span class="intro__list_bold">Природных заповедников</span> 105</li>
+        <li class="intro__list"><span class="intro__list_bold">Аэропортов</span> 241</li>
+      </ul>
       </section>
 
-      <section>
-        <ul class="photo-grid">
+      <section class="photo-grid">
+        <ul class="photo-grid__area">
           <li><img class="photo-grid__item" src="sprint-3-images/photo-grid-train.jpg" alt="Поезд"></li>
           <li><img class="photo-grid__item" src="sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="Пейзаж"></li>
           <li><img class="photo-grid__item" src="sprint-3-images/photo-grid-tuman.jpg" alt="Туман"></li>
@@ -53,96 +56,97 @@
 
       <section class="places">
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Куршская коса</h2>
           <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+            <a class="place__link" href="http://park-kosa.ru" target = "_blank">park-kosa.ru</a>
           </div>
-          <div>
+          <div class="place__main-text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Кольский</h2>
           <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="Кольский">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target = "_blank">National Geographic</a>
           </div>
-          <div>
+          <div class="place__main-text">
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Алтай</h2>
           <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="Алтай">
           <div class="place__website">
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <p class="place__url-heading">url</p>
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target = "_blank">Facebook</a>
           </div>
-          <div>
+          <div class="place__main-text">
             <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
             <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Зимний Байкал</h2>
           <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="Зимний Байкал">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <a class="place__link" href="https://vk.com/baikalmile" target = "_blank">https://vk.com/baikalmile</a>
           </div>
-          <div>
+          <div class="place__main-text">
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
             в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
             <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
           </div>
-          </div>
+          </article>
 
-        <div class="place">
+        <article class="place">
           <h2 class="place__title">Карелия</h2>
           <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="Карелия">
           <div class="place__website">
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+            <a class="place__link" href="http://vodlozero.ru" target = "_blank">http://vodlozero.ru/</a>
           </div>
-          <div>
+          <div class="place__main-text">
            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>  
-          </div>
+          </article>
 
       </section>
 
       <section class="cover">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target = "_blank"></a>
           <div class="cover__overlay"></div>
-          <img class="cover__background" alt="Байкал" src="sprint-3-images/cover-trains.jpg">
+          <div class="cover__background">
         </a>
       </section>
+      </main>
 
-      <section class="footer">
-        <div class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-        </div>
+      <footer class="footer">
+          <nav class="footer__links">
+            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+        </nav>
         <p class="footer__copyright">&copy; 2020. Соня Лист</p>
-      </section>
+      </footer>
 
     </div>
 </body>
