--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <header class="header">
         <img class="header__logo" src="sprint-3-images/header-logo.svg" alt="Логотип">
         <ul class="header__lang-links">
-          <li class="header__lang-link header__lang-link_active" href=#>Ru</a>
-          <li class="header__lang-link" href=#>En</a>
+          <li><a class="header__lang-link header__lang-link_active" href=#>Ru</a></li>
+          <li><a class="header__lang-link" href=#>En</a></li>
         </ul>
       </header>
 
@@ -29,11 +29,11 @@
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list-section">
-        <li class="intro__list"><span class="intro__list_bold">Часовых поясов</span> 11</li>
-        <li class="intro__list"><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li class="intro__list"><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li class="intro__list"><span class="intro__list_bold">Природных заповедников</span> 105</li>
-        <li class="intro__list"><span class="intro__list_bold">Аэропортов</span> 241</li>
+        <li class="intro__list"><span class="intro__list-bold">Часовых поясов</span> 11</li>
+        <li class="intro__list"><span class="intro__list-bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li class="intro__list"><span class="intro__list-bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li class="intro__list"><span class="intro__list-bold">Природных заповедников</span> 105</li>
+        <li class="intro__list"><span class="intro__list-bold">Аэропортов</span> 241</li>
       </ul>
       </section>
 
@@ -130,9 +130,8 @@
       <section class="cover">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target = "_blank"></a>
+        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target = "_blank">
           <div class="cover__overlay"></div>
-          <div class="cover__background">
         </a>
       </section>
       </main>
